
CHANGE LOG: 


V0.02
ADD: PRINTALL FUNCTIONALITY FOR CERTIFICATES
ADD: PRINT AWARDS FUNCTIONALITY


V0.01
ADD: READ IN ROSTER FUNCTIONALITY
ADD: PRINT CERT VIEW
ADDED: STUDENTVIEW BOX
ADDED: NAVIGATOR BAR