@@ -5,10 +5,12 @@ CHANGE LOG:
 V0.02
 ADD: PRINTALL FUNCTIONALITY FOR CERTIFICATES
 ADD: PRINT AWARDS FUNCTIONALITY
+ADD: PRINT CERT VIEW
 
 
 V0.01
-ADD: READ IN ROSTER FUNCTIONALITY
-ADD: PRINT CERT VIEW
+ADDED: READ IN ROSTER FUNCTIONALITY
+ADD: STUDENT LIST VIEW UTILIZING ROSTER
+ADD: ROSTER WRITE TO TEXT FILE
 ADDED: STUDENTVIEW BOX
 ADDED: NAVIGATOR BAR
